<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/colorMain"
    tools:context="com.example.myapplication.LogIn.RegisterActivity">

    <!-- Email Label -->


        <EditText android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:hint="@string/user_name" />


    <!-- Email Label -->

        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email" />



    <!-- Password Label -->

        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>


    <!-- Show Password Button -->
    <Button
        android:id="@+id/showPassword_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reg_showPassword" />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/createAcc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorOrange"
        android:text="@string/reg_createAcc" />




</LinearLayout>
