<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/colorMain"
    tools:context="com.example.myapplication.MyReceipts.CreateReceiptActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gallery_photo"/>
        <Button
            android:id="@+id/creat_rec_add_photo"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/cr_rec_camera"
            android:onClick="openGalleryOnClick"/>
        <EditText
            android:id="@+id/editTextRecipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cr_recipe_title"/>
        <EditText
            android:id="@+id/editTextRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:hint="@string/cr_recipe_description"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
