<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            tools:src="@drawable/dessert"/>


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_alignParentTop="true">


          <TextView
              android:id="@+id/poster"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:layout_gravity="right"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              tools:text=""/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              android:text="@string/cooked"/>

          <TextView
              android:id="@+id/date"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:layout_gravity="right"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              tools:text=""/>


        </LinearLayout>

        <ImageView
            android:id="@+id/animal_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            tools:src="@drawable/dessert"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minHeight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorLightblue"
            tools:text=""/>

        <TextView
            android:id="@+id/by_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minHeight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorLightblue"
            tools:text=""/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              android:id="@+id/liked"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              tools:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorLightblue"
                android:text="@string/liked"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              android:id="@+id/cooked"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              tools:text=""/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@color/colorLightblue"
              android:text="@string/people_cooked"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
          <ImageView
              android:id="@+id/like_icon"
              android:layout_width="15dp"
              android:layout_height="30dp"
              android:clickable="true"
              android:layout_gravity="left"
              android:layout_marginEnd="15dp"
              android:layout_weight="0.10"
              android:src="@drawable/heart" />
          <ImageView
              android:id="@+id/bookmark_icon"
              android:layout_width="15dp"
              android:layout_height="30dp"
              android:layout_alignParentEnd="true"
              android:layout_alignParentStart="false"
              android:layout_centerVertical="true"
              android:clickable="true"
              android:layout_gravity="center_vertical"
              android:layout_marginEnd="15dp"
              android:layout_weight="0.10"
              android:src="@drawable/bookmark"/>
          <ImageView
              android:id="@+id/send_icon"
              android:layout_width="15dp"
              android:layout_height="30dp"
              android:layout_centerVertical="true"
              android:clickable="true"
              android:layout_gravity="right"
              android:layout_weight="0.10"
              android:src="@drawable/send"/>


        </LinearLayout>







      </LinearLayout>

    </LinearLayout>





  </RelativeLayout>

</FrameLayout>